doctorapp/force-app/main/default/objects/Tax_Setting__c/Tax_Setting__c.object-meta.xml
<CustomObject>
    <description>System tax configuration (time-based).</description>
    <label>Tax Setting</label>
    <nameField>
        <label>Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>