doctorapp/force-app/main/default/objects/Tax_Setting__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Start date for this rate.</description>
    <label>Effective From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>