doctorapp/force-app/main/default/objects/Tax_Setting__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>End date (blank if current).</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>