doctorapp/force-app/main/default/objects/Tax_Setting__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one default tax setting should be active at a time.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>