doctorapp/force-app/main/default/objects/Tax_Setting__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Tax percentage (0-100).</description>
    <label>Rate (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>