doctorapp/force-app/main/default/objects/Tax_Setting__c/validationRules/Effective_Dates_Ordered.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Dates_Ordered</fullName>
    <active>true</active>
    <description>Effective To cannot precede Effective From.</description>
    <errorConditionFormula>NOT(ISBLANK(Effective_To__c)) &amp;&amp; Effective_To__c &lt; Effective_From__c</errorConditionFormula>
    <errorMessage>Effective To must be on or after Effective From.</errorMessage>
    <errorDisplayField>Effective_To__c</errorDisplayField>
</ValidationRule>