doctorapp/force-app/main/default/objects/Tax_Setting__c/validationRules/Rate_Within_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_Within_Range</fullName>
    <active>true</active>
    <description>Tax rate must be between 0 and 100 percent.</description>
    <errorConditionFormula>Rate__c &lt; 0 || Rate__c &gt; 100</errorConditionFormula>
    <errorMessage>Rate must be between 0 and 100.</errorMessage>
    <errorDisplayField>Rate__c</errorDisplayField>
</ValidationRule>